# IMServer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
ChatServer/: CMakeLists.txt  config.ini  config2.ini
ChatServer/Include/: ChatDefine.h  ChatGrpcClient.h  ChatLogic.h  ChatServiceImpl.h  MsgNode.h  Server.h  Session.h
ChatServer/Src/: ChatGrpcClient.cpp  ChatLogic.cpp  ChatServer.cpp  ChatServiceImpl.cpp  MsgNode.cpp  Server.cpp  Session.cpp
Common/: AsioIOServicePool.cpp  AsioIOServicePool.h  ConfigMgr.cpp  ConfigMgr.h  MysqlDAO.cpp  MysqlDAO.h  PubFuncLib.cpp  PubFuncLib.h  RedisMgr.cpp  RedisMgr.h  SingletonTemplate.h  StatusGrpcClient.cpp  StatusGrpcClient.h  ThreadWorkerTemplate.h  UserMgr.cpp  UserMgr.h  const.h
GateServer/: CMakeLists.txt  config.ini
GateServer/Include/: HttpConnection.h  LogicSystem.h  Server.h  StatusGrpcClient.h  VarifyGrpcClient.h  const.h
GateServer/Src/: GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  Server.cpp  StatusGrpcClient.cpp  VarifyGrpcClient.cpp  const.cpp
Protos/: CMakeLists.txt  StatusService.proto  message.proto
StatusServer/: CMakeLists.txt  config.ini
StatusServer/Include/: StatusServer.h  StatusServiceImpl.h
StatusServer/Src/: StatusServer.cpp  StatusServiceImpl.cpp
TestPro/: CMakeLists.txt  LlfRedisMgr.cpp  LlfRedisMgr.h  Test.cpp  config.ini
VarifyServer/: config.js  config.json  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
db/: friend.sql  friend_apply.sql  user.sql  user_id.sql
